MN-554 - more float roundings
git-svn-id: https://source.sakaiproject.org/contrib/muse/mneme/trunk@44538 fdecad78-55fc-0310-b1b2-d7d25cf747c9